--- a/_posts/2022-06-02-Blood-Brothers:-The-Scarred-History-of-China’s-Ethnic-Russians.html
+++ b/_posts/2022-06-02-Blood-Brothers:-The-Scarred-History-of-China’s-Ethnic-Russians.html
@@ -7,4 +7,5 @@ background: '/img/316.jpeg'
 
 <p>During the early 20th century, thousands of Russian refugees fleeing war and revolution crossed the freezing Amur River into northeast China. Today, the community is still trying to reconcile its identity — and process its collective trauma.</p>
 <p>Click for more information<p>
-<p>https://www.sixthtone.com/news/1010180<p>
+
+<li class="github"><a href="https://www.sixthtone.com/news/1010180" target="_blank"><i class="fa fa-newspaper"></i></a></li>
