--- a/_posts/2022-08-25-On a Loop — Rock, Paper, Scissors: Truth. Or Dare?.html
+++ b/_posts/2022-08-25-On a Loop — Rock, Paper, Scissors: Truth. Or Dare?.html
@@ -7,4 +7,5 @@ background: '/img/335.jpeg'
 
 <p>In this entry to Sixth Tone’s China Writing Contest, Li Yijuan explores the push and pull of family and future.</p>
 <p>Click for more information:<p>
-<p>https://www.sixthtone.com/news/1011064<p>
+
+<li class="github"><a href="https://www.sixthtone.com/news/1011064" target="_blank"><i class="fa fa-newspaper"></i></a></li>
