--- a/_posts/2022-10-28-Shanghai’s Forgotten Children.html
+++ b/_posts/2022-10-28-Shanghai’s Forgotten Children.html
@@ -7,4 +7,5 @@ background: '/img/759.png'
 
 <p>When a deadly famine struck China in the early 1960s, the city evacuated thousands of children to remote herding communities in Inner Mongolia. Six decades later, they’re still there.<p>
 <p>Click for more information:<p>
-<p>https://www.sixthtone.com/news/1011472<p>
+
+<li class="github"><a href="https://www.sixthtone.com/news/1011472" target="_blank"><i class="fa fa-newspaper"></i></a></li>
