--- a/_posts/2022-12-22-With Jobs at Home Scarce, Young Chinese Are Heading to Africa.html
+++ b/_posts/2022-12-22-With Jobs at Home Scarce, Young Chinese Are Heading to Africa.html
@@ -7,4 +7,5 @@ background: '/img/747.png'
 
 <p>Today’s Chinese graduates are facing the toughest domestic job market in decades. That’s leading many to look further afield for opportunities.<p>
 <p>Click for more information<p>
-    <p>https://www.sixthtone.com/news/1011956<p>
+
+<li class="github"><a href="https://www.sixthtone.com/news/1011956" target="_blank"><i class="fa fa-newspaper"></i></a></li>
