--- a/_posts/2023-08-13-The first Chinese chief in Africa.html
+++ b/_posts/2023-08-13-The first Chinese chief in Africa.html
@@ -7,4 +7,5 @@ background: '/img/Hujieguo.jpg'
 
 <p>Former teacher Hu Jieguo was the first of a growing number of Chinese awarded chieftaincy in Africa. We investigate how much power they actually have.<p>
     <p>Click for more information:<p>
-    <p>https://www.scmp.com/magazines/post-magazine/long-reads/article/3230814/first-chinese-chief-africa-does-he-and-others-him-wield-any-real-influence<p>
+
+<li class="github"><a href="https://www.scmp.com/magazines/post-magazine/long-reads/article/3230814/first-chinese-chief-africa-does-he-and-others-him-wield-any-real-influence" target="_blank"><i class="fa fa-newspaper"></i></a></li>
