Add gallery part

--- a/gallery.html
+++ b/gallery.html
@@ -1,12 +1,12 @@
 ---
 layout: page
-title: Contact Me
-description: If you have a (China-Africa) story idea, drop me a message ;)
-background: '/img/bg-contact.jpg'
+title: Gallery
+description: La vie
+background: '/gallery/sunset.jpg'
 form: true
 ---
 
-  <div class="container">
+  <!-- <div class="container">
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
         <ul class="list-inline text-center">
@@ -56,4 +56,4 @@ form: true
       </div>
     </div>
   </div>
-</footer>
+</footer> -->
