--- a/_posts/2022-10-28-Shanghai’s Forgotten Children.html
+++ b/_posts/2022-10-28-Shanghai’s Forgotten Children.html
@@ -2,7 +2,7 @@
 layout: post
 title: "Shanghai’s Forgotten Children"
 date: 2022-10-28
-background: '/img/759.png'
+background: /img/759.png
 ---
 
 <p>When a deadly famine struck China in the early 1960s, the city evacuated thousands of children to remote herding communities in Inner Mongolia. Six decades later, they’re still there.<p>
