--- a/_posts/2022-08-25-On a Loop — Rock, Paper, Scissors: Truth. Or Dare?.html
+++ b/_posts/2022-08-25-On a Loop — Rock, Paper, Scissors: Truth. Or Dare?.html
@@ -2,7 +2,7 @@
 layout: post
 title: "On a Loop — Rock, Paper, Scissors: Truth. Or Dare?"
 date: 2022-08-25
-background: '/img/335.jpeg'
+background: /img/335.jpeg
 ---
 
 <p>In this entry to Sixth Tone’s China Writing Contest, Li Yijuan explores the push and pull of family and future.</p>
