--- a/_posts/2022-12-22-With Jobs at Home Scarce, Young Chinese Are Heading to Africa.html
+++ b/_posts/2022-12-22-With Jobs at Home Scarce, Young Chinese Are Heading to Africa.html
@@ -2,7 +2,7 @@
 layout: post
 title: "With Jobs at Home Scarce, Young Chinese Are Heading to Africa"
 date: 2022-12-22
-background: '/img/747.png'
+background: /img/747.png
 ---
 
 <p>Today’s Chinese graduates are facing the toughest domestic job market in decades. That’s leading many to look further afield for opportunities.<p>
