--- a/_posts/2023-08-13-The first Chinese chief in Africa.html
+++ b/_posts/2023-08-13-The first Chinese chief in Africa.html
@@ -2,7 +2,7 @@
 layout: post
 title: "'The first Chinese chief in Africa', but does he-and others like him-wield any real influence?"
 date: 2023-08-13
-background: '/img/Hujieguo.jpg'
+background: /img/Hujieguo.jpg
 ---
 
 <p>Former teacher Hu Jieguo was the first of a growing number of Chinese awarded chieftaincy in Africa. We investigate how much power they actually have.<p>
