--- a/gallery.html
+++ b/gallery.html
@@ -2,7 +2,7 @@
 layout: page
 title: Gallery
 description: La vie
-background: '/gallery/sunset.jpg'
+background: '/gallery/ss.jpg'
 form: true
 ---
 
