--- a/_posts/2023-07-28-The-Fujian-Way:-How-One-Chinese-Region-Became-a-Dominant-Force-in-Africa.html
+++ b/_posts/2023-07-28-The-Fujian-Way:-How-One-Chinese-Region-Became-a-Dominant-Force-in-Africa.html
@@ -6,6 +6,6 @@ background: /img/392.jpeg
 ---
 
 <p>For decades, a network of entrepreneurs from China’s rough-and-tumble southern coastline have been quietly expanding their presence in Africa. Now, they’re driving a new wave of investment on the continent.<p>
-    <p>Click the mark below to read the full ariticle. Over.<p>
+    <p>Click the mark below to read the full ariticle.<p>
 
         <li class="github"><a href="https://www.sixthtone.com/news/1012681" target="_blank"><i class="fa fa-newspaper"></i></a></li>
