--- a/_posts/2023-01-19-Why-More-Young-Chinese-Profession-Are-Looking-For-Work-In-Africa.html
+++ b/_posts/2023-01-19-Why-More-Young-Chinese-Profession-Are-Looking-For-Work-In-Africa.html
@@ -1,11 +1,11 @@
 ---
 layout: post
-title: "Why More Young Chinese Professionals Are Looking For Work in Africa"
+title: "Podcast:Why More Young Chinese Professionals Are Looking For Work in Africa"
 date: 2023-01-19
 background: /img/957.jpg
 ---
 
 <p>Yijuan, herself a soon-to-be young graduate, joins Eric & Cobus from the eastern Algerian city of Amenas to discuss her own experience and why Africa is becoming a popular destination for young Chinese professionals.<p>
-    <p>Click the mark below to read the full ariticle.<p>
+    <p>Click the mark below for the podcast.<p>
 
         <li class="github"><a href="https://chinaglobalsouth.com/podcasts/why-more-young-chinese-professionals-are-going-to-work-in-africa/" target="_blank"><i class="fa fa-newspaper"></i></a></li>
