--- a/_posts/2022-11-01-阿尔及尔，我来到非洲的一座大楼里生活.html
+++ b/_posts/2022-11-01-阿尔及尔，我来到非洲的一座大楼里生活.html
@@ -2,7 +2,7 @@
 layout: post
 title: "阿尔及尔：我来到非洲的一座大楼里生活"
 date: 2022-11-01
-background: /img/meer.jpg
+background: /img/Meer.jpg
 ---
 
 <p>“去非洲”这个想法不完全是一时兴起。一方面是，我想当作家，作家似乎都需要经历。另一方面，教会我写作的老师曾经从美国出走到中国，由此激发了写作灵感。理所当然，他就成了我的模仿对象。再说了，大部分成长小说里，男孩总是在冒险，女孩总是在结婚，于是对我来说，女孩的冒险听起来像“未选择的路”一样诱人。<p>
