--- a/_posts/2023-09-20-My bosses made a bet that I would quit. I haven’t…yet..html
+++ b/_posts/2023-09-20-My bosses made a bet that I would quit. I haven’t…yet..html
@@ -2,7 +2,7 @@
 layout: post
 title: "My bosses made a bet that I would quit. I haven’t…yet."
 date: 2023-09-20
-background: 
+background: /img/See.jpg
 ---
 
 <p> China’s youth unemployment rate is soaring, and competition for good jobs is fiercer than ever. At the same time, young people are choosing to exit the rat race, jump between jobs, or quit working altogether. What gives?</p>
