--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Contact Me
-description: If you have a (China-Africa) story idea, drop me a message ;)
+description: If you have some (China-Africa) ideas, drop me a message ;)
 background: '/img/bg-contact.jpg'
 form: true
 ---
