--- a/_posts/2022-06-22-The perils of Chinese work culture.html
+++ b/_posts/2022-06-22-The perils of Chinese work culture.html
@@ -3,7 +3,7 @@ layout: post
 title: "The perils of Chinese work culture"
 subtitle:
 date: 2022-06-22
-background: 
+background: /img/Himmel.jpg
 ---
 <p>Why do the Chinese work so hard? And is it a good thing?<p>
 <p>Click the mark below to read the full ariticle.<p>
